--- a/app/views/detalle.html
+++ b/app/views/detalle.html
@@ -38,7 +38,7 @@
 
 		
 	</div>
-<!-- 	<div class="row">
+	<div class="row">
 		<div class="no-block col-md-6">
 		    <!-- slider container -->
 		    <div class="container slider" ng-controller="MainCtrl">
@@ -55,6 +55,6 @@
 		        </ul>
 		    </div>
 		</div>
-	</div> -->
+	</div> 
 
 </div>
