--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,8 @@
-<div class="container" id="temporal">
+<div class="container" id="contenthome">
         <img id="bgimg" src="/app/images/fondohome.png">
-        Espacio para el slider
+        <div class="description col-md-5">
+            <h1>Texto referente para destacar un producto con el objetivo de promocionar o dar relevancia</h1>
+        </div>
     </div>
     <div class="container">
         <div class="catalogo">
