--- a/app/views/admin/productos.html
+++ b/app/views/admin/productos.html
@@ -280,32 +280,31 @@
 	        			<h1 class="page-header">aqui va el titulo</h1>
 	        		</div>	        		
 	        	</div>
-	        	<div class="row">
+	        	<div class="row" style="margin-bottom:15px">
 	        		<div class="col-md-2">
 	        			<button class="btn" ng-click="anadir()">Añadir producto</button>
 	        		</div>
 	        	</div>
 	        	
-	        	<!-- <div class="table-responsive" ng-init="cargaInicial()">
+	        	<div class="table-responsive" ng-init="cargaInicial()" >	        		
 	        		<table class="table table-striped table-bordered table-hover" id="dataTables-example">
 	        			<thead>
 	        				<tr>
 	        					<th width="200px">Fecha de inserción</th>
-	        					<th>Nombre categoria</th>
+	        					<th>Nombre del producto</th>
 	        					<th width="100px">Editar</th>
         					</tr>
 	        			</thead>
 	        			<tbody ng-show="datosTabla.length > 0">
 	        				<tr ng-repeat="datos in datosTabla">
-	        					<td>{{datos.Fecha}}</td>
-	        					<td>{{datos.NombreCategoria}}</td>
-	        					<td>{{datos.descripcion}}</td>
-
+	        					<td>{{datos.fechaSubida}}</td>
+	        					<td>{{datos.nombre_producto}}</td>
+	        					<td><button class="form-control" ng-click="modificar($index)">Editar</button></td>
 	        				</tr>
 	        			</tbody>	        			
 	        		</table>	        		
 	        	</div>
-	        	<pagination total-items="totalItems" ng-model="paginaActual" max-size="maximoCategorias" ng-change="pageChanged()" class="pagination-sm" boundary-links="true" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination> -->
+	        	<pagination total-items="totalItems" ng-model="paginaActual" max-size="maximoCategorias" ng-change="pageChanged()" class="pagination-sm" boundary-links="true" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
 	        </div>
     	</div>
 
