--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -5,6 +5,9 @@
 		 <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <script type="text/javascript" src="../../js/angular-file-upload-shim.js"></script>    
+    	<script type="text/javascript" src="../../js/angular.min.js"></script>
+    	<script type="text/javascript" src="../../js/angular-file-upload.min.js"></script>
 
 	        <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
@@ -318,7 +321,7 @@
 	    <script src="../../js/sb-admin-2.js"></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>s
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script type="text/javascript" src="../../controllers/app.js"></script>
     <script type="text/javascript" src="../../controllers/administradorController.js"></script>
 	<script type="text/javascript" src="../../js/ui-bootstrap-tpls-0.11.0.js"></script>
