--- a/app/views/detalle.html
+++ b/app/views/detalle.html
@@ -2,21 +2,13 @@
 	<div class="row">
 		<div class="no-block col-md-6">
 			<div class="productName">
-				<h2>Nombre</h2>
+				<h2>{{producto.nombre_producto}}</h2>
 			</div>
 			<div class="productDesc">
 				Características
 				<ul class="featuresList" type="disk">
-					<li>Descripción lorem ipsum
-					</li>
-					<li>Descripción lorem ipsum
-					</li>
-					<li>Descripción lorem ipsum
-					</li>
-					<li>Descripción lorem ipsum
-					</li>
-					<li>Descripción lorem ipsum
-					</li>
+					<li ng-repeat="caracteristica in producto.Caracteristicas">{{caracteristica}}
+					</li>					
 				</ul>
 				
 			</div>	
@@ -38,16 +30,16 @@
 
 		
 	</div>
-	<div class="row">
+	<!-- <div class="row">
 		<div class="no-block col-md-6">
-		    <!-- slider container -->
+		    slider container
 		    <div class="container slider" ng-controller="MainCtrl">
-		        <!-- enumerate all photos -->
+		        enumerate all photos
 		        <img ng-repeat="photo in photos" class="slide" ng-swipe-right="showPrev()" ng-swipe-left="showNext()" ng-show="isActive($index)" ng-src="{{photo.src}}" />
-		        <!-- prev / next controls -->
+		        prev / next controls
 		        <a class="arrow prev" href="#" ng-click="showPrev()"></a>
 		        <a class="arrow next" href="#" ng-click="showNext()"></a>
-		        <!-- extra navigation controls -->
+		        extra navigation controls
 		        <ul class="nav">
 		            <li ng-repeat="photo in photos" ng-class="{'active':isActive($index)}">
 		                <img src="{{photo.src}}" alt="{{photo.desc}}" title="{{photo.desc}}" ng-click="showPhoto($index);" />
@@ -55,6 +47,6 @@
 		        </ul>
 		    </div>
 		</div>
-	</div> 
+	</div>  -->
 
 </div>
