--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div class="container" id="contenthome">
-        <img id="bgimg" src="/images/fondohome.png">
+        <img id="bgimg" src="../images/fondohome.png">
         <div class="description col-md-5">
             <h1>Texto referente para destacar un producto con el objetivo de promocionar o dar relevancia</h1>
         </div>
@@ -13,16 +13,15 @@
 <div class="product-section">
     <div class="container categoria">
         <span>Categoría X</span>
-        <div class="product">
+        <div class="product" ng-repeat="producto in productos">
             <div class="productImg  thumb">
-                <a class="thumbnail" href="#">
-                    <img src="images/Silla1.png">
-                    <div class="productName">
-                        Silla Universitaria NTC
-                    </div>
+                <a class="thumbnail" href="#/productos/{{producto.nombre_producto}}">
+                    <img src="{{producto.Imagenes[0]}}">
+                    <div class="divider-red"></div>
+                        {{producto.nombre_producto}}
+                        <!-- {{producto.Caracteristicas[0]}} -->                    
                 </a>                
-            </div>
-            
+            </div>            
         </div>
     </div>
     
