--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -165,6 +165,25 @@ ul.nav.navbar-nav{
     top: 0px;
     z-index: -1;*/
 }
+.slider{
+	float:right;
+	width: 500px;
+	height: 480px;
+	padding: 40px;
+	background-color: #F3F3F3;
+	border: 1px solid #CCCCCC;
+	margin-top: 20px;
+}
+.slider-img{
+	border: 1px solid #CCCCCC;
+	background-color: white;
+}
+.slider-thumbnail{
+	padding :20px;
+	background-color: white;
+	border: 1px solid #CCCCCC;
+	border-top: 0;
+}
 .description{
 
 	position:absolute;
@@ -192,6 +211,115 @@ ul.nav.navbar-nav{
 .product-section{
 	width: 100%;
 	background-color: #E6E6E6;
+}
+
+.my-slider {
+    width: 380px;
+    height: 300px;
+    font-size:0;
+}
+.my-slider li {
+    box-sizing: border-box;
+    font-size:30px;
+    position:relative;
+}
+.my-slider li div.debug {
+    box-sizing: border-box;
+    position:absolute;
+    bottom:0;
+    height:50px;
+    background:rgba(0,0,0,0.7);
+    color:white;
+    font-size:12px;
+    width:100%;
+    padding:5px;
+}
+.my-slider.standard li {
+    text-align:center;
+    padding:20px;
+    font-size:20px;
+}
+.big {
+    margin-top:30px;
+    width:100%;
+    font-size:30px;
+}
+.controls {
+    margin-top:5px;
+    width:380px;
+    text-align: center;
+}
+.ng-cloak {
+  display:none;
+}
+.center {
+    text-align:center;
+}
+.thumbs {
+    width:380px;
+    text-align:center;
+}
+.thumb2 {
+    display: inline-block;
+    background-size:cover;
+    border:1px solid transparent;
+    margin:2px 4px;
+    width:80px;
+    height:60px;
+    transition: border 0.2s ease-in;
+    border: 1px solid #CCCCCC;
+}
+.is-active {
+    border:1px solid red;
+}
+.details {
+    color:white;
+    font-size:12px;
+    margin-bottom:10px;
+}
+.button{
+    display: inline-block;
+    text-decoration: none;
+    font: bold 12px/12px HelveticaNeue, Arial;
+    padding: 8px 11px;
+    color: #555;
+    border: 1px solid #dedede;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    cursor:pointer;
+}
+.button:disabled {
+    cursor: default !important;
+    color: #aaa !important;
+}
+.button.grey{
+    background: #bdbdbd;
+    background: -webkit-gradient(linear, left top, left bottom, from(#cacaca), to(#aeaeae)); /*  WebKit */
+    background: -moz-linear-gradient(top,  #cacaca, #aeaeae);
+    border-color: #b5b5b5 #a1a1a1 #8f8f8f;
+    color: #555;
+    text-shadow: 0 1px 0 #d4d4d4;
+}
+.button.grey:hover{
+    background: #c2c2c2;
+    background: -webkit-gradient(linear, left top, left bottom, from(#bcbcbc), to(#c2c2c2)); /*  WebKit */
+    background: -moz-linear-gradient(top,  #bcbcbc, #c2c2c2);
+    border-color: #989898 #8e8e8e #878787;
+    text-shadow: 0 1px 0 #dadada;
+}
+
+/* override default controls */
+.rn-carousel-control {
+    font-size:50px !important;
+    color:white;
+    opacity: 1;
+}
+.rn-carousel-control.rn-carousel-control-prev {
+    left: 5px;
+}
+.rn-carousel-control.rn-carousel-control-next {
+    right: 5px;
 }
 @media (max-width: 991px){
 	.infoheader{
