--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,9 +1,9 @@
 <div class="container" id="contenthome">
-        <img id="bgimg" src="../images/fondohome.png">
-        <div class="description col-md-5">
-            <h1>Texto referente para destacar un producto con el objetivo de promocionar o dar relevancia</h1>
-        </div>
+    <img id="bgimg" src="../images/fondohome.png">
+    <div class="description col-md-5">
+        <h1>Texto referente para destacar un producto con el objetivo de promocionar o dar relevancia</h1>
     </div>
+</div>
 <div class="container">
     <div class="catalogo">
         <span >Catálogo de Productos</span>
@@ -25,4 +25,13 @@
         </div>
     </div>
     
+</div>
+<div class="footer container">
+    <div class="mapasitio">
+        <a href="#/mapasitio">Mapa del sitio</a>
+    </div>
+    <div class="terminos">
+        <a href="#/terminos">Términos y políticas de uso</a>
+    </div>
+
 </div>
