--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -255,6 +255,16 @@ ul.nav.navbar-nav{
 .center {
     text-align:center;
 }
+.btn-red{
+	background-color: #990000;
+	border-color: #FFFFFF;
+	border-radius: 8px;
+	width: 283px;
+	height: 36px;
+}
+.btn-red:hover{
+	background-color: #790000;
+}
 .thumbs {
     width:380px;
     text-align:center;
