--- a/app/views/admin/productos.html
+++ b/app/views/admin/productos.html
@@ -277,12 +277,12 @@
 	        <div id="page-wrapper">
 	        	<div class="row">
 	        		<div class="col-md-12">
-	        			<h1 class="page-header">aqui va el titulo</h1>
+	        			<h1 class="page-header">Productos</h1>
 	        		</div>	        		
 	        	</div>
 	        	<div class="row" style="margin-bottom:15px">
 	        		<div class="col-md-2">
-	        			<button class="btn" ng-click="anadir()">Añadir producto</button>
+	        			<button class="btn btn-primary" ng-click="anadir()">Añadir producto</button>
 	        		</div>
 	        	</div>
 	        	
@@ -293,13 +293,15 @@
 	        					<th width="200px">Fecha de inserción</th>
 	        					<th>Nombre del producto</th>
 	        					<th width="100px">Editar</th>
+	        					<th width="100px">Eliminar</th>
         					</tr>
 	        			</thead>
 	        			<tbody ng-show="datosTabla.length > 0">
 	        				<tr ng-repeat="datos in datosTabla">
 	        					<td>{{datos.fechaSubida}}</td>
 	        					<td>{{datos.nombre_producto}}</td>
-	        					<td><button class="form-control" ng-click="modificar($index)">Editar</button></td>
+	        					<td><button class="form-control btn btn-success" ng-click="modificar($index)">Editar</button></td>
+	        					<td><button class="form-control btn btn-danger" ng-click="eliminar($index)">Eliminar</button></td>
 	        				</tr>
 	        			</tbody>	        			
 	        		</table>	        		
