--- a/app/views/modal/crearCategorias.html
+++ b/app/views/modal/crearCategorias.html
@@ -6,7 +6,7 @@
         <form>
         	<div class="form-group">
 	            <label>Nombre de la categoría</label>
-	            <input class="form-control" ng-model="datos.nombre" />
+	            <input class="form-control" ng-model="datos.nombre" ng-disabled="bloquearCampo.bloqueo" />
 	            <!--<p class="help-block">Nombre</p>-->
 	        </div>
 	        <div class="form-group">
