--- a/app/css/estilos.css
+++ b/app/css/estilos.css
@@ -56,18 +56,24 @@ form.form-contacto div.form-group textarea{
 }
 .footer{
 	padding-top: 15px;
+
 }
 .footer div{
 	display: inline-block;
 	padding-right: 20px;
+}
+.cotizar{
+	border-top: 1px solid black;
+	padding-top: 15px;
 }
 .container.header{
 	background-color: #333333;
 	height: 104px;
 }
 .product{
-	width: 180px;
+	width: 190px;
 	height: 276px;
+	padding: 0 5px 0 5px;
 }
 /*a.thumbnail:hover	{
 	background-color: #990000;
