--- a/app/views/modal/crearProductos.html
+++ b/app/views/modal/crearProductos.html
@@ -27,8 +27,8 @@
                 </div>
                 <div class="panel-body">
                     <ul class="list-group">                    
-                        <li class="list-group-item" ng-repeat="caracteristicas in datos.caracteristicas">                            
-                            <label>{{caracteristicas}}</label>
+                        <li class="list-group-item" ng-repeat="caracteristicas in datos.Caracteristicas">                            
+                            <label>{{caracteristicas.Descripcion}}</label>
                         </li>
                     </ul>
                 </div>
