--- a/app/views/modal/crearProductos.html
+++ b/app/views/modal/crearProductos.html
@@ -11,7 +11,10 @@
 	        </div>
 	        <div class="form-group">
 	            <label>Categoría</label>
-                <select ng-model="seleccion.categoria" class="form-control" ng-options= "elemento.Nombre for elemento in categoria.categorias" >
+                <select ng-model="seleccion.categoria" class="form-control">
+                    <option ng-repeat= "elemento in categoria.categorias" value="{{elemento.idCategoria}}">
+                        {{elemento.Nombre}}
+                    </option>
                 </select>
 	        </div>
             <div class="panel panel-primary">
