--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,7 +13,7 @@
 <div class="product-section">
     <div class="container categoria" ng-repeat="categoria in categorias">
         <span>{{categoria.NombreCategoria}}</span><br>
-        <div class="product col-md-2 col-lg-2" ng-repeat="producto in productos">
+        <div class="product col-md-2 col-lg-2" ng-repeat="producto in productos | filter:categoria.NombreCategoria">
             <div class="productImg  thumb">
                 <a class="thumbnail" href="#/productos/{{producto.nombre_producto}}">
                     <img src="{{producto.Imagenes[0]}}">
