--- a/app/views/modal/crearProductos.html
+++ b/app/views/modal/crearProductos.html
@@ -11,11 +11,13 @@
 	        </div>
 	        <div class="form-group">
 	            <label>Categoría</label>
-                <select ng-model="seleccion.categoria" class="form-control">
+                <select ng-model="seleccion.categoria" class="form-control" ng-options="elemento.Nombre for elemento in categoria.categorias">
+                </select>
+                <!-- <select ng-model="seleccion.categoria" class="form-control">
                     <option ng-repeat= "elemento in categoria.categorias" value="{{elemento.idCategoria}}">
                         {{elemento.Nombre}}
                     </option>
-                </select>
+                </select> -->
 	        </div>
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -30,8 +32,21 @@
                 </div>
                 <div class="panel-body">
                     <ul class="list-group">                    
-                        <li class="list-group-item" ng-repeat="caracteristicas in datos.Caracteristicas">                            
+                        <li class="list-group-item" ng-repeat="caracteristicas in datos.Caracteristicas">
+                            <label>{{caracteristicas}}</label>
+                            <span>
+                                <span class="pull-right">
+                                    <button type="button" class="btn btn-danger btn-xs" ng-click="borrarCaracteristica($index)"><i class="glyphicon glyphicon-remove-circle" ></i></button>
+                                </span>
+                            </span>
+                        </li>
+                        <li class = "list-group-item" ng-repeat="caracteristicas in datos.CaracteristicasHistorico">
                             <label>{{caracteristicas.Descripcion}}</label>
+                            <span>
+                                <span class="pull-right">
+                                    <button type="button" class="btn btn-danger btn-xs" ng-click="borrarCaracteristicaHistorial($index)"><i class="glyphicon glyphicon-remove-circle" ></i></button>
+                                </span>
+                            </span>
                         </li>
                     </ul>
                 </div>
@@ -45,8 +60,35 @@
                 </div>                
             </div>
             <ul class="list-group" style="margin-top:10px">                    
-                <li class="list-group-item" ng-repeat="imagen in datos.imagenes">                            
+                <li class="list-group-item" ng-repeat="imagen in datos.imagenes">                    
                     <label>{{imagen.name}}</label>
+                    <span>
+                        <span class="pull-right">
+                            <button type="button" class="btn btn-danger btn-xs" ng-click="eliminarImagen($index)">Eliminar</button>
+                        </span>
+                    </span>
+                </li>
+                <li class="list-group-item" ng-repeat="imagen in datos.ImagenesHistorico">
+                    <div class="row"> 
+                        <div class="col-md-8">
+                            <label>Imagen {{$index + 1}}<label>
+                        </div>
+                        <div class="col-md-2">
+                            <span>
+                                <span class="pull-right">
+                                    <a href="../../{{imagen.Url}}" target="_blank" class="btn btn-info btn-xs">Ver imagen</a>
+                                </span>
+                            </span>
+                        </div>
+                        <div class="col-md-2">
+                            <span>
+                                <span class="pull-right">
+                                    <button type="button" class="btn btn-danger btn-xs" ng-click="eliminarImagenHistorico($index)">Eliminar</button>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                    
                 </li>
             </ul>
             
